# QBrainEvaluatin-

./: .gitignore  README.md
QBrain/rag_lab/: .gitignore  jupyter_bootstrap.py  pyproject.toml
QBrain/rag_lab/docs/: qbrain_ieee_paper.tex  (+1 more)
rag_lab/: .gitignore  pyproject.toml  requirements.txt  supabase_setup.sql
rag_lab/notebooks/: 05_rag_api_end_to_end_demo.ipynb  06_retrieval_api_evaluation.executed.ipynb
rag_lab/results/retrieval_api_eval/: report.json
rag_lab/scripts/: evaluate_retrieval_api.py
rag_lab/src/: __init__.py
rag_lab/src/api/: main.py
rag_lab/src/api/controllers/: __init__.py  base_controller.py  rag_controller.py
rag_lab/src/api/repositories/: __init__.py  feature_repository.py  performance_metrics_repository.py  project_repository.py  test_case_repository.py  vector_repository.py
rag_lab/src/api/routes/: base.py  chatbot.py  features.py  projects.py  rag.py  test_cases.py
rag_lab/src/api/routes/schemes/: __init__.py  chatbot.py  features.py  projects.py  rag.py  test_cases.py
rag_lab/src/api/services/: __init__.py  feature_service.py  performance_metrics_service.py  project_service.py  rag_api_service.py  supabase_client.py  supabase_query.py  test_case_service.py  vector_sync_service.py
rag_lab/src/application/: chunking.py  document_context.py  document_pipeline.py  evaluation.py  feature_extraction.py  json_utils.py  prompts_srs.py  test_case_generation.py
rag_lab/src/config/: settings.py
rag_lab/src/infrastructure/: __init__.py  embeddings.py  llm.py  vector_store.py
rag_lab/src/services/: rag_service.py
(+79 files in other folders)
